--- a/styles.css
+++ b/styles.css
@@ -1,209 +1,305 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;800&display=swap');
 
 * {
+  font-family: 'Inter', sans-serif;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Inter", sans-serif;
 }
 
 html {
   scroll-behavior: smooth;
 }
 
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.container {
+  padding: 120px 0;
 }
 
-nav {
-  height: 80px;
-  display: flex;
+.row {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.purple {
+  color: #6415FF;
+}
+
+.title {
+  color: #6415FF;
+  font-size: 16px;
+  letter-spacing: 1px;
+  margin-bottom: 16px;
+}
+
+.subtitle {
+  color: #243E63;
+  font-size: 48px;
+  font-weight: 800;
+  letter-spacing: 1px;
+}
+
+.learn__btn {
+  color: #F7FAFC;
+  background-color: #6415FF;
+  font-size: 14px;
+  font-weight: 700;
+  margin: 32px 0 0 0;
+  padding: 12px 32px;
+  border: none;
+  border-radius: 99px;
+  cursor: pointer;
+  transition: all 300ms ease;
+}
+
+.learn__btn:hover {
+  color: #EDF2F7;
+  background-color: #5011CC;
 }
 
 a {
   text-decoration: none;
 }
 
-li {
-  list-style-type: none;
+#landing {
+  animation: animate-landing 900ms;
 }
-/*Navigation -----------------------------*/
 
-.purple {
-  color: #6415ff;
+#features {
+  animation: animate-landing-reverse 900ms;
+}
+
+@keyframes animate-landing {
+  0% {
+    transform: translateX(-2000px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes animate-landing-reverse {
+  0% {
+    transform: translateX(2000px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+
+/*NAVIGATION NAVIGATION NAVIGATION NAVIGATION NAVIGATION NAVIGATION NAVIGATION NAVIGATION */
+
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
 }
 
 .nav__container {
   display: flex;
-  width: 100%;
-  max-width: 1300px;
   justify-content: space-between;
-  margin: 0 auto;
   align-items: center;
-  padding-top: 40px;
+  height: 100px;
 }
 
 .nav__logo--wrapper {
   display: flex;
   align-items: center;
-}
-
-.nav__logo {
-  width: 100%;
-  max-width: 40px;
-}
-
-.nav__logo--name {
-  font-size: 24px;
-  padding: 0 16px;
-  font-weight: bold;
-  color: black;
-  transition: all 250ms ease;
+  justify-content: space-between;
 }
 
 .nav__logo--wrapper:hover {
   .nav__logo--name {
-    color: #6415ff;
-    transform: scale(1.02);
+    color: #6415FF;
   }
 }
 
+.nav__logo {
+  width: 100%;
+  max-width: 52px;
+  padding: 0 12px 0 0;
+  transition: all 300ms ease;
+}
+
+.nav__logo--name {
+  font-size: 24px;
+  font-weight: 800;
+  color: #243E63;
+  margin: 0 24px 0 0;
+  transition: all 300ms ease;
+}
+
+/*NAVIGATION LINKS ON THE RIGHT*/
+
 .nav__links {
+  list-style-type: none;
   display: flex;
 }
 
 .nav__link {
-  padding: 0 28px;
-  text-decoration: none;
-  font-weight: bold;
+  margin: 0 24px;
+  color: #243E63;
   font-size: 14px;
+  font-weight: 700;
+  padding: 0 0 4px 0;
+  border-bottom: solid 2px;
+  border-color: white;
   transition: all 300ms ease;
 }
 
+.nav__link:hover {
+  color: #6415FF;
+  border-color: #6415FF;
+}
+
 .nav__link--primary {
-  color: white;
-  background-color: #6415ff;
-  border-radius: 50px;
-  padding: 12px 34px;
+  color: #F7FAFC;
+  background-color: #6415FF;
+  font-size: 14px;
+  font-weight: 700;
+  padding: 12px 32px;
+  border-radius: 99px;
+  margin: 0;
   transition: all 300ms ease;
 }
 
 .nav__link--primary:hover {
-  background-color: #4b02dd;
+  background-color: #5011CC;
+  color: #EDF2F7;
 }
 
-/*Header -----------------------------*/
-
-header {
-  height: calc(100vh - 80px);
+.nav__link--secondary {
+  margin-left: 48px;
 }
 
-.container {
-  width: 100%;
-  max-width: 1300px;
-  margin: 0 auto;
-  height: 100%;
+/*NAVIGATION NAVIGATION NAVIGATION NAVIGATION NAVIGATION NAVIGATION NAVIGATION NAVIGATION */
+
+
+
+
+/*HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER */
+
+
+
+/*TITLE, WRITING, EMAIL, TRUSTED CUSTOMERS*/
+
+.header__squares {
   display: flex;
-  flex-direction: row;
-  padding-top: 96px;
+  align-items: center;
 }
 
 .header__description {
   width: 40%;
-  padding-right: 16px;
-  display: flex;
-  flex-direction: column;
 }
 
 .header__title {
   font-size: 48px;
-  padding: 24px 0 32px 0
+  font-weight: 700;
+  color: #1A202C;
+  text-align: left;
 }
 
-h2 {
+.header__info {
   font-size: 18px;
   font-weight: 400;
   color: #243E63;
+  margin: 32px 0;
   line-height: 1.5;
-  margin-bottom: 32px;
-}
-
-.header__img--wrapper {
-  width: 60%;
-}
-
-.header__img {
-  width: 100% ;
 }
 
 .email__input {
-  width: 100%;
-  position: relative;
+  border: solid #d3d3d384 2px;
+  border-radius: 99px;
+  padding: 1px 8px;
+  display: flex;
+  justify-content: space-between;
+  z-index: 1;
+  transition: border 400ms ease;
 }
 
-input {
-  padding-left: 32px;
-  width: 100%;
-  max-width: 448px;
-  height: 68px;
-  border-radius: 99px;
-  border-width: 2px;
+.email__input:hover {
+  cursor: text;
+  border: solid #3d3c3c5c 2px;
+}
+
+.email__input:focus-within {
+  border-color: #6415FF;
+}
+
+.email__written {
+  border: none;
+  outline: none;
   font-size: 16px;
   font-weight: 500;
+  margin-left: 18px;
+  opacity: 0.5;
+  max-height: 68px;
+  width: 100%;
+  max-width: 276px;
 }
 
 .email__btn {
-  position: absolute;
-  top: 0;
-  right: 60px;
-  z-index: 2;
+  color: #F7FAFC;
+  font-weight: 800;
+  font-size: 16px;
+  background-color: #6415FF;
+  margin: 8px 4px 8px 0;
+  padding: 16px 32px;
   border: none;
   border-radius: 99px;
-  top: 0px;
-  width: 100%;
-  max-width: 160px;
-  height: 52px;
+  transition: all 300ms ease;
+  z-index: 2;
   cursor: pointer;
-  color: white;
-  background-color: #6415ff;
-  font-size: 16px;
-  font-weight: bold;
-  margin: 8px 8px 8px 0;
 }
 
-.trust {
-  margin-top: 80px;
-  display: flex;
-  flex-direction: column;
+.email__btn:hover {
+  background-color: #3C0D99;
+  color: #F7FAFC;
+}
+
+.trusted {
+  margin: 80px 0 0 0;
 }
 
 .trusted__customers {
   color: #A0AEC0;
   font-size: 12px;
-  font-weight: 700;
-  margin-bottom: 0;
   letter-spacing: 1px;
 }
 
 .trustees {
-  margin-top: 16px;
-  padding-right: 100px;
-  width: 100%;
+  margin: 16px 0 0 0;
+  padding: 0 128px 0 0;
   opacity: 0.5;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
-/*FEATURES FEATURES FEATURES ----------*/
+/*HEADER IMAGE ------- */
 
-.container__features {
-  padding-top: 0;
-  display: flex;
-  flex-direction: column;
+.header__img--wrapper {
+  width: 60%;
+  max-height: 100%;
 }
 
-.features__row {
-
+.header__img {
+ max-width: 100%;
+ max-height: 100%;
 }
+
+
+/*HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER */
+
+
+
+
+/*FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES  */
+
+
+/*FEATURES TITLE AND DESCRIPTION*/
 
 .features__headings {
   display: flex;
@@ -211,47 +307,41 @@ input {
   align-items: center;
 }
 
-.features__title {
-  font-size: 16px;
-  font-weight: 700;
-  letter-spacing: 2px;
-}
-
-.features__subtitle {
-  font-size: 48px;
-  color: #243E63;
-  font-weight: 700;
-  width: 100%;
-  max-width: 1024px;
-  text-align: center;
-}
-
 .features__description {
   text-align: center;
-  margin-top: 16px;
-  margin-bottom: 0;
+  margin-top: 24px;
+  margin-bottom: 28px;
+  font-size: 18px;
+  font-weight: 500;
   width: 100%;
   max-width: 576px;
+  color: #7C8BA1;
+  line-height: 1.7;
 }
 
 
+/*FEATURES LINKS ---------------*/
 
-
-
-.features__links {
+.features__items {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
-.features__link {
+.item {
+  padding: 32px 8px;
+  margin: 0 16px;
+  width: calc(100% / 4);
   display: flex;
-  flex-direction: row;
-  width: 100%;
-  max-width: 212px;
 }
 
 .features__img--container {
-
+  border: solid 1.5px;
+  border-color: #7c8ba13c;
+  border-radius: 99px;
+  padding: 20px;
+  height: 68px;
 }
 
 .features__img {
@@ -260,18 +350,660 @@ input {
 }
 
 .features__text {
-
+  display: flex;
+  flex-direction: column;
+  margin: 8px 0 0 16px;
 }
 
 .feature__name {
   color: #243E63;
   font-size: 24px;
-  margin: 16px 0;
 }
 
-p {
+.feature__description {
   color: #7C8BA1;
   font-size: 16px;
-  margin: 16px 0;
-  line-height: 1.5;
+  font-weight: 500;
+  margin-top: 16px;
+  line-height: 2;
 }
+
+
+/*FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES FEATURES  */
+
+
+
+
+/*QUALITY WORK QUALITY WORK QUALITY WORK QUALITY WORK QUALITY WORK QUALITY WORK QUALITY WORK  */
+
+.quality__work--wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.quality__title {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 50%;
+}
+
+.quality__description {
+  color: #7C8BA1;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 16px 0 0 0;
+  width: 100%;
+  max-width: 576px;
+  line-height: 1.7;
+}
+
+.quality__img--wrapper {
+  width: 50%;
+}
+
+.quality__img {
+  width: 100%;
+  border: solid 1px #7c8ba167;
+  border-radius: 6px;
+}
+
+/*QUALITY WORK QUALITY WORK QUALITY WORK QUALITY WORK QUALITY WORK QUALITY WORK QUALITY WORK  */
+
+
+
+
+/*STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS   */
+
+.steps__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.steps__text {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  padding: 32px 0;
+  padding-left: 80px;
+}
+
+.steps__img--wrapper {
+  width: 50%;
+}
+
+.steps__img {
+  width: 100%;
+  max-width: 600px;
+}
+
+.steps {
+  display: flex;
+  flex-direction: column;
+}
+
+.step {
+  display: flex;
+  margin-top: 32px;
+}
+
+.number {
+  color: #CBD5E0;
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.step__title--description {
+  margin-left: 24px;
+}
+
+.step__title {
+  color: #243E63;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.step__description {
+  margin-top: 12px;
+  font-size: 14px;
+  color: #718096;
+  line-height: 1.7;
+  width: 100%;
+  max-width: 320px;
+}
+
+/*STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS STEPS   */
+
+
+
+
+/*VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES  */
+
+.values__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.values__title {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.values__description {
+  color: #7C8BA1;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.7;
+  margin-top: 32px;
+}
+
+.tags {
+  display: flex;
+}
+
+.tag {
+  margin: 32px 32px 0 0;
+}
+
+.tag__img {
+  width: 36px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dollar__wrapper {
+  background-color: #9AE6B4;
+  border-radius: 99px;
+}
+
+.dollar {
+  width: 20px;
+  height: 20px;
+  opacity: 0.5;
+}
+
+.briefcase__wrapper {
+  background-color: #FEB2B2;
+  border-radius: 99px;
+}
+
+.briefcase {
+  width: 20px;
+  height: 20px;
+  opacity: 0.5;
+}
+
+.title__logo--wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.tag__title {
+  color: #243E63;
+  font-size: 20px;
+  margin-left: 12px;
+}
+
+.tag__description {
+  color: #718096;
+  font-size: 16px;
+  line-height: 1.7;
+  margin-top: 16px;
+}
+
+.values__img--wrapper {
+  width: 50%;
+}
+
+.values__img {
+  width: 100%;
+}
+
+/*VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES VALUES  */
+
+
+
+
+/*PRICING PRICING PRICING PRICING PRICING PRICING PRICING PRICING PRICING PRICING PRICING PRICING */
+
+.pricing__title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pricing__description {
+  margin-top: 16px;
+  color: #7C8BA1;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.7;
+  width: 100%;
+  max-width: 576px;
+  text-align: center;
+}
+
+.plans {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 64px;
+}
+
+/*PERSONAL --------------- */
+
+.plan__personal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 32px;
+  margin-right: 32px;
+}
+
+.heading__personal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: solid rgba(211, 211, 211, 0.485) 2px;
+  border-top: greenyellow solid 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding: 40px 112px;
+}
+
+.title__personal {
+  color: #1A202C;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.price__personal {
+  font-size: 48px;
+  color: #1A202C;
+  margin: 4px 0;
+}
+
+.time__personal {
+  color: #A0AEC0;
+  font-size: 16px;
+  letter-spacing: 2px;
+}
+
+.who__personal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 -32px;
+  border: solid rgba(211, 211, 211, 0.485) 2px;
+  border-top: none;
+  padding: 40px 119px;
+}
+
+.for__personal {
+  color: #1A202C;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.attributes__personal {
+  text-align: center;
+  line-height: 2.5;
+  color: #718096;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.footer__personal {
+  border: solid rgba(211, 211, 211, 0.485) 2px;
+  border-top: none;
+  padding: 40px 94px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.btn__personal {
+  color: #F7FAFC;
+  background-color: greenyellow;
+  border: none;
+  border-radius: 99px;
+  padding: 32px 64px;
+}
+
+/*BUSINESS ------------------*/
+
+.plan__business {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 32px;
+  margin-right: 32px;
+}
+
+.heading__business {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: solid rgba(211, 211, 211, 0.485) 2px;
+  border-top: #6415FF solid 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding: 40px 112px;
+  background-color: #6415FF;
+}
+
+.title__business {
+  color: #F7FAFC;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.price__business {
+  font-size: 48px;
+  color: #F7FAFC;
+  margin: 4px 0;
+}
+
+.time__business {
+  color: #EDF2F7;
+  font-size: 16px;
+  letter-spacing: 2px;
+}
+
+.who__business {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 -32px;
+  border: solid rgba(211, 211, 211, 0.485) 2px;
+  border-top: none;
+  padding: 40px 90px;
+  background-color: #6415FF;
+}
+
+.for__business {
+  color: #F7FAFC;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.attributes__business {
+  text-align: center;
+  line-height: 2.5;
+  color: #E2E8F0;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.footer__business {
+  border: solid rgba(211, 211, 211, 0.485) 2px;
+  border-top: none;
+  padding: 40px 100px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: #6415FF;
+}
+
+.btn__business {
+  color: #F7FAFC;
+  background-color: greenyellow;
+  border: none;
+  border-radius: 99px;
+  padding: 32px 64px;
+}
+
+/*ENTERPRISE ------------*/
+
+.plan__enterprise {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 32px;
+  margin-right: 32px;
+}
+
+.heading__enterprise {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: solid rgba(211, 211, 211, 0.485) 2px;
+  border-top: greenyellow solid 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding: 40px 112px;
+}
+
+.title__enterprise {
+  color: #1A202C;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.price__enterprise {
+  font-size: 48px;
+  color: #1A202C;
+  margin: 4px 0;
+}
+
+.time__enterprise {
+  color: #A0AEC0;
+  font-size: 16px;
+  letter-spacing: 2px;
+}
+
+.who__enterprise {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 -32px;
+  border: solid rgba(211, 211, 211, 0.485) 2px;
+  border-top: none;
+  padding: 40px 90px;
+}
+
+.for__enterprise {
+  color: #1A202C;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.attributes__enterprise {
+  text-align: center;
+  line-height: 2.5;
+  color: #718096;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.footer__enterprise {
+  border: solid rgba(211, 211, 211, 0.485) 2px;
+  border-top: none;
+  padding: 40px 98px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.btn__enterprise {
+  color: #F7FAFC;
+  background-color: greenyellow;
+  border: none;
+  border-radius: 99px;
+  padding: 32px 64px;
+}
+
+/*PRICING PRICING PRICING PRICING PRICING PRICING PRICING PRICING PRICING PRICING PRICING PRICING */
+
+
+
+
+/*TESTIMONIALS TESTIMONIALS TESTIMONIALS TESTIMONIALS TESTIMONIALS TESTIMONIALS TESTIMONIALS TESTIMONIALS  */
+
+.testimonials__img--wrapper {
+
+}
+
+.testimonials__img {
+
+}
+
+.testimonials__wrapper {
+
+}
+
+.testimonials__titling {
+
+}
+
+.testimonials__description {
+
+}
+
+/*REVIEW -------------------*/
+
+.review {
+
+}
+
+.review__heading {
+
+}
+
+.review__descriptiom {
+
+}
+
+/*REVIEWER -------------------*/
+
+.reviewer {
+
+}
+
+.reviewer__img--wrapper {
+
+}
+
+.reviewer__img {
+
+}
+
+.reviewer__name {
+
+}
+
+.reviewer__job {
+
+}
+
+
+/*TESTIMONIALS TESTIMONIALS TESTIMONIALS TESTIMONIALS TESTIMONIALS TESTIMONIALS TESTIMONIALS TESTIMONIALS  */
+
+
+
+
+/*FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS   */
+
+.faq__titling {
+
+}
+
+.faqs__description {
+
+}
+
+.questions--wrapper {
+
+}
+
+.question {
+
+}
+
+.question__title {
+
+}
+
+.question__answer {
+
+}
+
+/*FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS FAQS   */
+
+
+
+
+/*START START START START START START START START START START START START START START START START START START START */
+
+.purple__box {
+
+}
+
+.start__description {
+
+}
+
+.start__title {
+
+}
+
+.start__btns {
+
+}
+
+.get-started__btn {
+
+}
+
+.contact-us__btn {
+
+}
+
+/*START START START START START START START START START START START START START START START START START START START */
+
+
+
+
+/*FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER */
+
+.links {
+
+}
+
+.link {
+
+}
+
+.link__title {
+
+}
+
+.footer__info {
+
+}
+
+.footer__logo {
+
+}
+
+.footer__copyright {
+
+}
+
+.social__links {
+
+}
+
+.social__link {
+
+}
+
+
+/*FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER */
